--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.2
   easy_splash_screen: ^1.0.3
-  firebase_auth: ^3.3.7
-  firebase_core: ^1.12.0
+  firebase_auth: ^3.3.8
+  firebase_core: ^1.13.0
   flutter:
     sdk: flutter
+  get: ^4.6.1
 
 dev_dependencies:
   flutter_lints: ^1.0.0
