--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_dialog: ^2.1.2
+  cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
   easy_splash_screen: ^1.0.3
   firebase_auth: ^3.3.8
   firebase_core: ^1.13.0
-  awesome_dialog: ^2.1.2
   fl_chart: ^0.45.0
   flutter:
     sdk: flutter
+  form_validator: ^1.0.2
   intl: ^0.17.0
   mask_text_input_formatter: ^2.1.0
-  
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_lints: ^1.0.0
