--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flutter:
     sdk: flutter
   form_validator: ^1.0.2
+  get: ^4.6.1
   intl: ^0.17.0
   mask_text_input_formatter: ^2.1.0
   uuid: ^3.0.6
